<resources>
    <string name="app_name">GPS Silence</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>



    <!-- exception toasts -->
    <string name="exception_location">Couldn\'t get last known location</string>
    <string name="exception_emptyLbl">Name can\'t be empty!</string>
    <string name="exception_invalidLocation">Invalid Location</string>
    <string name="exception_notChecked">No soundprofile is selected!</string>

    <!-- permissions -->
    <string name="permission_gps">Please allow the app to use your location!\n
        \nThe app doesn\'t give your GPS- information to any 3rd parties. Any GPS- data is only beeing used for the app\'s function of managing the sound profiles of your device based on your location.\n
        \nYour locations are only beeing stored on your device and are gone when deleting this app.
    </string>
    <string name="permission_sound">Please allow the app to manage your sound profiles!\n
        \nAdjusting your sound profile is one of the core functions of this app.</string>
    <string name="permission_ok">Okay</string>
    <string name="permission_close">Close</string>
    <string name="permission_gps_denied">Please allow the app to access your location and to manage your sound profile!\n
        \nYour GPS- data and adjusting your sound profile are needed for the core features of the app to work.\nYou sadly can\'t use the app without granting these permissions!
    </string>

    <!-- main -->
    <string name="main_map">Map</string>
    <string name="main_add_cord">Add Place</string>
    <string name="main_view_locs">View Locations</string>
    <string name="main_settings">Settings</string>
    <string name="main_background_disclosure">GPS Silence collects location data to compare your added locations with your current location and to adjust the device\'s sound setting according to your in-app configuration, even when the app is closed or not in use.\n
        Only the lat/lng-coordinates of your device are beeing used within the app.\n
        This might affect your battery. That\'s why you can adjust the interval, in which the algorithm fires in the background, in the app\'s settings.</string>
    <string name="main_doze_warning">Warning!</string>
    <string name="main_doze_warning_text">Your current settings will prohibit collecting location data in the background, while the device is in doze.\n\n
        You can put this app on whitelist, otherwise it won\'t work, while the app is in doze.</string>
    <string name="main_whitelist_ok">Okay</string>
    <string name="main_whitelist_cancel">Cancel</string>

    <!-- add -->
    <string name="Add_Header">New Location</string>
    <string name="Add_name">Location name</string>
    <string name="Add_soundprofile">Sound Profile</string>
    <string name="Add_alarm">Alarm</string>
    <string name="Add_cancel">Cancel</string>

    <!-- settings -->
    <string name="Settings">Settings</string>
    <string name="Settings_defaultSp">Choose the default soundprofile</string>
    <string name="Settings_interval">How often should the app check your location?</string>
    <string name="Settings_alarm_frequency_5">5 min</string>
    <string name="Settings_alarm_frequency_15">15 min</string>
    <string name="Settings_alarm_frequency_30">30 min</string>
    <string name="Settings_alarm_frequency_60">1 Hour</string>
    <string name="Settings_alarm_frequency_120">2 Hours</string>
    <string name="Settings_radius">How large should the radius of your saved locations be?</string>
    <string name="Settings_deavtivate">Deactivate app</string>
    <string name="Settings_activate">Activate app</string>

    <!-- locations -->
    <string name="Locations">Locations</string>
    <string name="Locations_edit_save">Save</string>
</resources>
