<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.gms.maps.MapView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/Map_map"
        android:alpha="1"
        android:visibility="visible"/>

    <Button
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/Map_BtnAdd"
        android:background="@drawable/ic_add_circle_black_24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias=".95"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias=".95" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/Map_Add_root"
        android:background="@drawable/rect_round_white"
        android:elevation="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"
        android:visibility="gone">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/Map_Add_GlLeft"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="0dp"
            app:layout_constraintGuide_percent=".2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Map_Add_Header"
            android:text="@string/Add_Header"
            android:textSize="24sp"
            android:textColor="@color/colorText_DarkGrey"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/Map_add_EtLbl"
            android:textSize="20sp"
            android:hint="@string/Add_name"
            android:singleLine="true"
            android:inputType="textPostalAddress"
            app:layout_constraintTop_toBottomOf="@id/Map_Add_Header"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="8dp"
            android:layout_marginTop="64dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/Map_add_SoundProfile_text"
            android:text="@string/Add_soundprofile"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Map_add_EtLbl"
            android:layout_marginTop="44dp" />

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/Map_add_RadioGroup"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Map_add_SoundProfile_text"
            android:layout_marginTop="8dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Map_add_radio_loud"
                android:drawableRight="@drawable/ic_volume_up_black_24dp"
                android:layout_weight="1"
                android:layout_gravity="center" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Map_add_radio_vibrating"
                android:drawableRight="@drawable/ic_vibration_black_24dp"
                android:layout_weight="1"
                android:layout_gravity="center" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Map_add_radio_mute"
                android:drawableRight="@drawable/ic_volume_off_black_24dp"
                android:layout_weight="1"
                android:layout_gravity="center" />

        </RadioGroup>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/Map_add_confirm"
            android:elevation="10dp"
            android:text="@string/permission_ok"
            android:textAllCaps="false"
            android:textColor="@color/colorText_DarkGrey"
            android:textSize="22sp"
            android:background="@drawable/rect_round_mint"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintTop_toBottomOf="@id/Map_add_RadioGroup"
            app:layout_constraintBottom_toTopOf="@id/Map_add_cancel"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="1"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/Map_add_cancel"
            android:elevation="10dp"
            android:text="@string/Add_cancel"
            android:textAllCaps="false"
            android:textColor="@color/colorText_DarkGrey"
            android:textSize="22sp"
            android:background="@drawable/rect_round_white"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

