<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Main_DrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/Main_Location_Disclosure_Root"
        android:background="@android:color/transparent"
        android:elevation="8dp"
        android:visibility="gone">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/Main_Location_Disclosure_GlTop"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="0dp"
            app:layout_constraintGuide_percent=".15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/Main_Location_Disclosure_GlBot"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="0dp"
            app:layout_constraintGuide_percent=".85" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/Main_Location_Disclosure_GlRight"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="0dp"
            app:layout_constraintGuide_percent=".9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/Main_Location_Disclosure_GlLeft"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="0dp"
            app:layout_constraintGuide_percent=".1" />

        <Button
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/Main_Location_Disclosure_BtnClose"
            android:background="@drawable/ic_baseline_cancel_24"
            android:elevation="10dp"
            app:layout_constraintLeft_toLeftOf="@id/Main_Location_Disclosure_GlRight"
            app:layout_constraintRight_toRightOf="@id/Main_Location_Disclosure_GlRight"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/Main_Tv_Location_Disclosure"
            app:layout_constraintVertical_bias="1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/Main_Tv_Location_Disclosure"
            android:text="@string/main_background_disclosure"
            android:textSize="16sp"
            android:background="@drawable/rect_round_white"
            android:padding="8dp"
            android:elevation="10dp"
            app:layout_constraintLeft_toRightOf="@id/Main_Location_Disclosure_GlLeft"
            app:layout_constraintRight_toLeftOf="@id/Main_Location_Disclosure_GlRight"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/Main_Whitelist_Warning_Bg"
        android:background="@android:color/transparent"
        android:elevation="8dp"
        android:visibility="gone">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/Main_Whitelist_Warning_Bg_GlTop"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="0dp"
            app:layout_constraintGuide_percent=".15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/Main_Whitelist_Warning_Bg_GlLeft"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="0dp"
            app:layout_constraintGuide_percent=".1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/Main_Whitelist_Warning_Bg_GlRight"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="0dp"
            app:layout_constraintGuide_percent=".9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/Main_Whitelist_Warning_Bg_GlBot"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="0dp"
            app:layout_constraintGuide_percent=".85" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/Main_Whitelist_Warning_Root"
            android:orientation="vertical"
            android:background="@drawable/rect_round_white"
            android:elevation="10dp"
            app:layout_constraintLeft_toRightOf="@id/Main_Whitelist_Warning_Bg_GlLeft"
            app:layout_constraintRight_toLeftOf="@id/Main_Whitelist_Warning_Bg_GlRight"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone">

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@android:color/transparent"
                android:id="@+id/Main_Whitelist_Warning_Divider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Main_Whitelist_Warning_TvHeader"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:text="@string/main_doze_warning"
                android:textSize="18sp"
                android:textColor="@color/colorText_Red"
                android:textAlignment="center"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@android:color/transparent"
                android:id="@+id/Main_Whitelist_Warning_Divider1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Main_Whitelist_Warning_TvWarning"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:text="@string/main_doze_warning_text"
                android:textSize="16sp"
                android:textAlignment="center" />

            <View
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:background="@android:color/transparent"
                android:id="@+id/Main_Whitelist_Warning_Divider2" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Main_Whitelist_Warning_BtnOk"
                android:background="@drawable/rect_round_mint"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:text="@string/main_whitelist_ok"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@android:color/transparent"
                android:id="@+id/Main_Whitelist_Warning_Divider3" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Main_Whitelist_Warning_BtnCancel"
                android:background="@drawable/rect_round_white"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:text="@string/main_whitelist_cancel"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@android:color/transparent"
                android:id="@+id/Main_Whitelist_Warning_Divider4" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <fragment
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/Main_Fragment"
        app:defaultNavHost="true"
        app:navGraph="@navigation/main_nav_graph" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/Main_nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/side_nav_menu" />



</androidx.drawerlayout.widget.DrawerLayout>